--- a/templates/UserManagement/register.html
+++ b/templates/UserManagement/register.html
@@ -1,17 +1,22 @@
 {% extends 'base.html' %}
 {% load static %}
 
+{% block title %}Register{% endblock %}
+
 {% block content %}
 <div class="container mt-5 text-light">
-    <h2 class="mb-3">Register</h2>
+    <h1>Register</h1>
     <form method="post" enctype="multipart/form-data" class="text-dark">
         {% csrf_token %}
         {{ form.as_p }}
         <button type="submit" class="btn btn-primary">Register</button>
     </form>
-    <p class="mt-3"><button type="button" class="btn btn-primary">Already have an account? <a href="{% url 'login' %}" class="btn btn-primary">Log in</a></button> </p>
+    <p class="mt-3">
+        <a href="{% url 'login' %}" class="btn btn-primary">Already have an account? Log in</a>
+    </p>
 </div>
-    {% block extra_body %}
-<script src="{% static 'javascript/form_validation.js' %}"></script>
 {% endblock %}
-{% endblock %}
+
+{% block extra_body %}
+<script src="{% static 'UserManagement/form_validation.js' %}"></script>
+{% endblock extra_body %}
