--- a/templates/UserManagement/profile.html
+++ b/templates/UserManagement/profile.html
@@ -2,8 +2,11 @@
 {% block content %}
 <div class="container mt-5">
     <h1>{{ user.username }}'s Profile</h1>
+    {% if user.is_authenticated %}
+    <a href="{% url 'UserManagement:edit_profile' %}">Edit Profile</a>
     <p>Email: {{ user.email }}</p>
     <p>Join date: {{ user.date_joined }}</p>
-    <!-- Add more user details here -->
+
+{% endif %}
 </div>
 {% endblock %}
