--- a/templates/UserManagement/home.html
+++ b/templates/UserManagement/home.html
@@ -2,10 +2,21 @@
 
 {% block title %}Home{% endblock %}
 
+
 {% block content %}
+
 <div class="container mt-5 text-dark">
+    <span class="dot"></span>
     <h1 class="display-4">Welcome Home!</h1>
+
+    
     <p class="">Hello, {{ user.username }}. Here's what's new:</p>
+    
+<img src="..." alt="..." class="img-thumbnail">
+    <br>
+    <button type="button" class="btn btn-primary">Friends</button>
+    <button type="button" class="btn btn-primary"> Pets </button>
+    <button type="button" class="btn btn-primary">Photos</button>
     
     <!-- Example content and buttons -->
     <div class="mt-4">
@@ -15,5 +26,7 @@
     <button type="submit" class="btn btn-link">Logout</button>
 </form>
     </div>
+
+
 </div>
 {% endblock %}
