Fixed css and implemented it

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -2,7 +2,7 @@
 
 /* General app CSS rules */
 body {
-    background-color: #f5f5f5;  /* Light grey background */
+    /*background-color: #f5f5f5;  /* Light grey background */
     color: #000;  /* Black text */
 }
 
