Updates nav depending on user_is_authenticated. Also added a search bar that is not connected to anything.

--- a/templates/UserManagement/profile.html
+++ b/templates/UserManagement/profile.html
@@ -21,9 +21,9 @@
             <p>Join date: {{ user.date_joined }}</p>
                 
             <div class="btn-group" role="group" aria-label="User actions">
-                <a href="{% url 'UserManagement:pets' %}" class="btn btn-primary">Pets</a>
-                <a href="{% url 'UserManagement:friends' %}" class="btn btn-primary">Friends</a>
-                <a href="{% url 'UserManagement:photos' %}" class="btn btn-primary">Photos</a>
+{#                <a href="{% url 'UserManagement:pets' %}" class="btn btn-primary">Pets</a>#}
+{#                <a href="{% url 'UserManagement:friends' %}" class="btn btn-primary">Friends</a>#}
+{#                <a href="{% url 'UserManagement:photos' %}" class="btn btn-primary">Photos</a>#}
             </div>
             {% endif %}
         </div>
