--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,9 @@
 </head>
 <body>
     <header>
+    
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">  <!-- Dark theme navbar -->
+        
             <a class="navbar-brand" href="{% url 'UserManagement:home' %}">My Site</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -20,9 +22,23 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item"><a class="nav-link" href="{% url 'UserManagement:home' %}">Home</a></li>
-                    <li class="nav-item"><a class="btn btn-secondary" href="{% url 'UserManagement:login' %}">Login</a></li>
-                    <li class="nav-item"><a class="nav-link" href="{% url 'UserManagement:register' %}">Register</a></li>
-                </ul>
+                    {% if user.is_authenticated %}
+                        <li class="nav-item"><a class="btn btn-secondary" href="{% url 'UserManagement:profile' %}">Profile</a></li>
+                        <li class="nav-item"><a class="btn btn-secondary" href="{% url 'UserManagement:logout' %}">Logout</a></li>
+                            <form class="form-inline my-2 my-lg-0">
+                                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+                                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                            </form>
+                    {% else %}
+                        <li class="nav-item"><a class="btn btn-secondary" href="{% url 'UserManagement:login' %}">Login</a></li>
+                        <li class="nav-item"><a class="nav-link" href="{% url 'UserManagement:register' %}">Register</a></li>
+                        </ul>
+                        
+                        
+                    {% endif %}
+                    
+                    
+                
             </div>
         </nav>
     </header>
