--- a/templates/UserManagement/home_.html
+++ b/templates/UserManagement/home_.html
@@ -1,23 +1,54 @@
 {% extends 'base.html' %}
 
 {% block title %}Home{% endblock %}
+{#spacing refernce#}
+{#<div class="container mt-5">#} 
+{#    <div class="row">#}
+{#        <div class="col-md-8">#}
+{#            <h1 class="homepage-welcome">Welcome to PawsConnect</h1>#}
+{#            <p class="homepage-description">#}
+{#                Welcome to PawsConnect, the ultimate social network for pet lovers! This platform allows you to connect with a vibrant community of pet owners,#}
+{#                share your cherished moments, explore valuable advice, and discover new friendships for both you and your beloved pets. #}
+{#                Whether you're here to showcase your pet's latest adventures, seek tips on pet care, or just browse the delightful array of pet photos, #}
+{#                PawsConnect is your go-to hub for all things pets. Join us and become part of this wonderful pet-loving family!#}
+{#            </p>#}
+{#        </div>#}
+{#        <div class="col-md-4 homepage-aside">#}
+{#            <img src="{{ MEDIA_URL }}homepic.jpeg" alt="Owner and Dog" class="img-fluid">#}
+{#            <div class="mt-3">#}
+{#                <a href="{% url 'UserManagement:login' %}" class="homepage-button">Login</a>#}
+{#                <a href="{% url 'UserManagement:register' %}" class="homepage-button">Register</a>#}
+{#            </div>#}
+{#        </div>#}
+{#    </div>#}
+{#</div>#}
+
 
 {% block content %}
-<div class="container mt-5">
-    <div class="row">
-        <div class="col-md-8">
-            <h1 class="homepage-welcome">Welcome to PawsConnect</h1>
-            <p class="homepage-description">
-                Welcome to PawsConnect, the ultimate social network for pet lovers! This platform allows you to connect with a vibrant community of pet owners, share your cherished moments, explore valuable advice, and discover new friendships for both you and your beloved pets. Whether you're here to showcase your pet's latest adventures, seek tips on pet care, or just browse the delightful array of pet photos, PawsConnect is your go-to hub for all things pets. Join us and become part of this wonderful pet-loving family!
+    {% if user.is_authenticated %}
+        
+    {% else %}
+        <div class="container mt-5">
+            <div class="row">
+                <div class="col-md-8">
+                    <h1 class="homepage-welcome">Welcome to PawsConnect</h1>
+                    <p class="homepage-description">
+                Welcome to PawsConnect, the ultimate social network for pet lovers! This platform allows you to connect with a vibrant community of pet owners,
+                share your cherished moments, explore valuable advice, and discover new friendships for both you and your beloved pets. 
+                Whether you're here to showcase your pet's latest adventures, seek tips on pet care, or just browse the delightful array of pet photos, 
+                PawsConnect is your go-to hub for all things pets. Join us and become part of this wonderful pet-loving family!
             </p>
+                 </div>
+                    <div class="col-md-4 homepage-aside">
+                        <img src="{{ MEDIA_URL }}homepic.jpeg" alt="Owner and Dog" class="img-fluid">
+                         <div class="mt-3">
+                               <a href="{% url 'UserManagement:login' %}" class="homepage-button">Login</a>
+                             <a href="{% url 'UserManagement:register' %}" class="homepage-button">Register</a>
+                        </div>
+                    </div>
+             </div>
         </div>
-        <div class="col-md-4 homepage-aside">
-            <img src="{{ MEDIA_URL }}homepic.jpeg" alt="Owner and Dog" class="img-fluid">
-            <div class="mt-3">
-                <a href="{% url 'UserManagement:login' %}" class="homepage-button">Login</a>
-                <a href="{% url 'UserManagement:register' %}" class="homepage-button">Register</a>
-            </div>
-        </div>
-    </div>
-</div>
+        
+    {% endif %}
+
 {% endblock %}
