--- a/UserManagement/static/UserManagement/styles.css
+++ b/UserManagement/static/UserManagement/styles.css
@@ -4,6 +4,10 @@
 body {
     background-color: #f5f5f5;  /* Light grey background */
     color: #000;  /* Black text */
+    display: flex;
+    flex-direction: column; /* Stack children vertically */
+    min-height: 100vh;
+    position: relative;
 }
 
 /* UserManagement app CSS rules */
@@ -109,7 +113,9 @@ footer {
     text-align: center;
     background-color: darkblue;
     color: lightgray;
+    margin-top: auto;
     padding: 20px;
+    width: 100%;
 }
 
 hr {
@@ -121,3 +127,42 @@ p {
   margin-right: 10%;
   text-align: center;
 }
+
+nav {
+  background-color: darkblue;
+  padding: 10px;
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+#content {
+  background-color: #fff;
+  padding: 20px;
+  border-radius: 20px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 1);
+  width: 80%;
+  max-width: 800px;
+  margin: auto;
+  /* margin-top: 40px; */
+  text-align: center;
+}
+
+h2 {
+  text-align: center;
+  margin-left: 10%;
+  margin-right: 10%;
+  padding: 10px;
+  font-family: 'Archivo Black', sans-serif;
+}
+
+#login-container {
+    background-image: url('/media/background.jpg');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    padding: 20px;
+}
+
+
