--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -109,6 +109,7 @@ footer {
     text-align: center;
     background-color: darkblue;
     color: lightgray;
+    margin-top: 50px;
     padding: 20px;
 }
 
@@ -121,3 +122,13 @@ p {
   margin-right: 10%;
   text-align: center;
 }
+
+nav {
+  background-color: darkblue;
+  padding: 10px;
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
