--- a/templates/base.html
+++ b/templates/base.html
@@ -19,9 +19,27 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav mr-auto">
-                    <li class="nav-item"><a class="nav-link" href="{% url 'UserManagement:home' %}">Home</a></li>
-                    <li class="nav-item"><a class="btn btn-secondary" href="{% url 'UserManagement:login' %}">Login</a></li>
+                    
+                    {% if user.is_authenticated %}
+                        <li class="nav-item"><a class="nav-link" href="{% url 'UserManagement:logout' %}">Logout</a></li>
+                        <li class="nav-item"><a class="nav-link" href="{% url 'UserManagement:profile' %}">Profile</a></li>
+                        <form class="form-inline">
+                            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+                            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                        </form>
+                        
+                        
+                    
+                    
+                    {% else %}
+                        <li class="nav-item"><a class="nav-link" href="{% url 'UserManagement:home' %}">Home</a></li>
+                        <li class="nav-item"><a class="btn btn-secondary" href="{% url 'UserManagement:login' %}">Login</a></li>
                     <li class="nav-item"><a class="nav-link" href="{% url 'UserManagement:register' %}">Register</a></li>
+                        
+                        
+                    {% endif %}
+                    
+
                 </ul>
             </div>
         </nav>
