--- a/templates/UserManagement/register.html
+++ b/templates/UserManagement/register.html
@@ -4,18 +4,43 @@
 {% block title %}Register{% endblock %}
 
 {% block content %}
-<div class="container mt-5">
-    <h1 class="text-dark">Register</h1>
-    <form method="post" enctype="multipart/form-data" class="registration-form p-3 rounded" style="background-color: black;">
-
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit" class="btn btn-primary">Register</button>
-  </form>
-    <p class="mt-3">
-        Already have an account? <a href="{% url 'UserManagement:login' %}" class="btn btn-secondary">Log in</a>
-    </p>
-</div>
+    <style>
+    body {
+        background-image: url('/media/registerbk.jpg');
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+        margin: 0;
+        padding: 0;
+    }
+    
+    .text-black {
+        color: black;
+    }
+    
+    .registration-form input[type="text"],
+    .registration-form input[type="email"],
+    .registration-form input[type="password"],
+    .registration-form textarea,
+    .registration-form select {
+        width: 100%;
+    }
+    
+    </style>
+    
+    <div class="container mt-5">
+        <div id="registerContent">
+            <h2 class="text-black">Register</h2>
+            <form method="post" enctype="multipart/form-data" class= "registration-form p-3 rounded">
+                {% csrf_token %}
+                {{ form.as_p }}
+                <button type="submit" class="btn btn-primary">Register</button>
+            </form>
+            <p class="mt-3">
+                <a href="{% url 'UserManagement:login' %}" class="btn btn-primary">Already have an account? Log in</a>
+            </p>
+        </div>
+    </div>
 {% endblock %}
 
 {% block extra_body %}
