This is an extremely important push. This sets up the PostGIS database and the requirements for the application to run with it. Wholesale changes made to the database and models -- ##NOT ready for everyone else yet

--- a/templates/UserManagement/profile.html
+++ b/templates/UserManagement/profile.html
@@ -6,8 +6,8 @@
     
         <div class="col-md-9">
             <h1>{{ user.username }}'s Profile</h1>
-            {% if user.bio %}
-            <p>Bio: {{ user.bio }}</p>
+            {% if user.about_me %}
+            <p>Bio: {{ user.about_me }}</p>
             {% endif %}
             {% if user.location %}
             <p>Location: {{ user.location }}</p>
