--- a/templates/base.html
+++ b/templates/base.html
@@ -50,5 +50,6 @@
     <img id="csumb_logo" src="{{ MEDIA_URL }}logo.png" alt="CSUMB Logo">
     <p>CST438. 2024 ⒸLuciano, Baker, Rodas, Grimaldo</p>
 </footer>
+    {% block extra_body %}{% endblock %}
 </body>
 </html>
