--- a/templates/UserManagement/register.html
+++ b/templates/UserManagement/register.html
@@ -22,8 +22,31 @@
     .registration-form input[type="email"],
     .registration-form input[type="password"],
     .registration-form textarea,
-    .registration-form select {
-        width: 100%;
+    .registration-form select,
+    .registration-form p {
+        width: 50%;
+        margin: 10px 0;
+    }
+    
+    .registration-form {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    
+    .registration-form ul {
+        margin: 0 auto; 
+        padding: 0;
+        display: flex; 
+        justify-content: center; 
+        flex-direction: column; 
+        align-items: center; 
+    }
+
+    .registration-form ul li {
+        margin: 10px 0; 
+        text-align: center; 
+        max-width: 300px; 
     }
     
     </style>
@@ -34,6 +57,7 @@
             <form method="post" enctype="multipart/form-data" class= "registration-form p-3 rounded">
                 {% csrf_token %}
                 {{ form.as_p }}
+                
                 <button type="submit" class="btn btn-primary">Register</button>
             </form>
             <p class="mt-3">
@@ -41,6 +65,7 @@
             </p>
         </div>
     </div>
+    <br><br>
 {% endblock %}
 
 {% block extra_body %}
