--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -4,6 +4,7 @@
 body {
     /*background-color: #f5f5f5;  /* Light grey background */
     color: #000;  /* Black text */
+
 }
 
 /* UserManagement app CSS rules */
@@ -130,5 +131,8 @@ nav {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+}
+.custom-dropdown{
+    color: white;
 }
 
