--- a/UserManagement/templates/UserManagement/register.html
+++ b/UserManagement/templates/UserManagement/register.html
@@ -87,6 +87,7 @@
                 <button type="submit" class="btn btn-primary">Register</button>
             </form>
             <p class="mt-3">
+                <a href="{% provider_login_url 'google' %}" class="btn btn-danger">Register with Google</a>
                 <a href="{% url 'UserManagement:login' %}" class="btn btn-primary">Already have an account? Log in</a>
             </p>
         </div>
