Added the button to lead users profile when logged in as well as logged out. Login and register are hidden when user is logged in. In edit, Finished design for edit profile. Edited Profile.html so that the edit profile button was in the center of page and info.

--- a/UserManagement/templates/UserManagement/pets.html
+++ b/UserManagement/templates/UserManagement/pets.html
@@ -3,8 +3,8 @@
 
 <style>
     .left-align-hr {
-        width: calc(500% + 200px); /* Adjust width to cover the entire width of the page */
-        margin: 0 -50px 50px -500px; /* Remove any margins */
+        width: calc(500% + 200px);
+        margin: 0 -50px 50px -500px;
         border: none;
         border-top: 3px dotted darkblue;
         border-radius: 5px;
