--- a/templates/base.html
+++ b/templates/base.html
@@ -14,6 +14,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 
+    <!-- FontAwesome CDN -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+
 </head>
 
 <body>
@@ -26,8 +29,22 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item"><a class="nav-link" href="{% url 'UserManagement:home' %}">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="{% url 'UserManagement:login' %}">Login</a></li>
-                    <li class="nav-item"><a class="nav-link" href="{% url 'UserManagement:register' %}">Register</a></li>
+                    {% if user.is_authenticated %}
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'UserManagement:profile' %}">
+                                Profile <i class="fas fa-user"></i>
+                            </a>
+                        </li>
+                        
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'UserManagement:logout' %}">
+                                Logout <i class="fas fa-sign-out-alt"></i>
+                            </a>
+                        </li>
+                    {% else %}
+                        <li class="nav-item"><a class="nav-link" href="{% url 'UserManagement:login' %}">Login</a></li>
+                        <li class="nav-item"><a class="nav-link" href="{% url 'UserManagement:register' %}">Register</a></li>
+                    {% endif %}
                 </ul>
                 
                 <form class="form-inline my-2 my-lg-0">
