Working Search for all filters

--- a/UserManagement/templates/UserManagement/landing_page.html
+++ b/UserManagement/templates/UserManagement/landing_page.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'UserManagement/base.html' %}
 
 {% block content %}
 <div class="container text-light mt-5">  <!-- Added margin-top for spacing -->
