--- a/templates/SocialInteraction/comment_create.html
+++ b/templates/SocialInteraction/comment_create.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'UserManagement/base.html' %}
 {% block content %}
     <h2>New Comment</h2>
     <form method="POST">
