--- a/UserManagement/templates/UserManagement/login.html
+++ b/UserManagement/templates/UserManagement/login.html
@@ -1,4 +1,5 @@
 {% extends 'UserManagement/base.html' %}
+{% load socialaccount %}
 
 {% block title %}Login{% endblock title %}
 
@@ -18,32 +19,40 @@
         <div class="p-4 rounded">
             <div id="content">
                 <h2 class="text-black">Login</h2>
-                <form method="post" action="{% url 'UserManagement:login' %}" class="text-black">
-                    {% csrf_token %}
-                    {{ form.as_p }}
-                    {% if form.non_field_errors %}
-                        <div class="alert alert-danger" role="alert">
-                            {{ form.non_field_errors }}
-                        </div>
-                    {% endif %}
-                    <button type="submit" class="btn btn-primary">Login</button>
-                </form>
-                <a href="{% provider_login_url 'google' %}" class="btn btn-danger">Login with Google</a>
+                <div id="loginFormContainer">
+                    <form method="post" action="{% url 'UserManagement:login' %}" class="text-black" id="loginForm">
+                        {% csrf_token %}
+                        {{ form.as_p }}
+                        {% if form.non_field_errors %}
+                            <div class="alert alert-danger" role="alert">
+                                {{ form.non_field_errors }}
+                            </div>
+                        {% endif %}
+                        <button type="submit" class="btn btn-primary">Login</button>
+                    </form>
+                </div>
+               <a href="{% provider_login_url 'google' %}" class="btn btn-danger" id="googleLoginBtn">Login with
+                   Google</a>
+
                 <br>
                 <a href="{% url 'UserManagement:register' %}" class="btn btn-primary">Don't have an Account? Register</a>
             </div>
         </div>
     </div>
-    
+
     <script>
     document.getElementById("loginForm").addEventListener("submit", function(event) {
         var username = document.getElementById("id_username").value.trim();
         var password = document.getElementById("id_password").value.trim();
-        
+
         if (!username || !password) {
             alert("Username and Password fields cannot be empty!");
-            event.preventDefault();
+            // event.preventDefault(); // Commented out to allow form submission
         }
+    });
+
+    document.getElementById("googleLoginBtn").addEventListener("click", function() {
+        document.getElementById("loginFormContainer").style.display = "none";
     });
     </script>
 {% endblock content %}
